<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="210dp" android:background="#673AB7">

    <TextView
            android:text="@string/cikis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dialogCikis"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" android:textSize="24sp" android:textColor="#FF9800"/>
    <TextView
            android:text="@string/eminmisin"
            android:layout_width="match_parent"
            android:layout_height="35dp" android:id="@+id/dialogEmin"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/dialogCikis" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#FFFFFF" android:textSize="18sp" android:gravity="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dialogHayir"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/dialogEmin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="72dp" android:layout_marginStart="72dp" android:text="@string/hayir"
            android:background="#FFEB3B" app:layout_constraintEnd_toStartOf="@+id/dialogEvet"
            android:layout_marginEnd="91dp" android:layout_marginRight="91dp"/>
    <Button
            android:text="@string/evet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/dialogEvet"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/dialogEmin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="72dp" android:layout_marginRight="72dp" android:background="#FFEB3B"
    />
</androidx.constraintlayout.widget.ConstraintLayout>