<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AnaEkran" android:background="#FCE4EC">
    <Button
            android:text="@string/bilgi"
            android:layout_width="192dp"
            android:layout_height="55dp" android:id="@+id/bilgi"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/oyunBasla" android:background="@android:color/holo_orange_dark"
            android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/oyunaBasla"
            android:layout_width="192dp"
            android:layout_height="55dp" android:id="@+id/oyunBasla"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginTop="264dp"
            android:background="@android:color/holo_orange_dark" android:textColor="#FFFFFF"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="88dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/karakterIsim"
                android:id="@+id/isim" android:selectAllOnFocus="false" android:singleLine="true"
                android:focusable="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.gms.ads.AdView
            android:id="@+id/bannerAnaEkran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/bannerReklam"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.0"
            ads:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

    </com.google.android.gms.ads.AdView>
    <ImageView
            android:layout_width="158dp"
            android:layout_height="184dp" ads:srcCompat="@drawable/karakter" android:id="@+id/imageView"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintHorizontal_bias="0.5" ads:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" ads:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>