<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkorEkrani" android:background="#DF59F6">

    <TextView
            android:text="AZRA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="76dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.649" app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#fff" android:textSize="24sp" android:id="@+id/skorIsim"/>
    <TextView
            android:text="562"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" android:textSize="24sp" android:id="@+id/enyuksekskor"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="47dp"
            android:layout_marginRight="47dp" app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginLeft="21dp" android:layout_marginStart="21dp" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/puan" app:layout_constraintHorizontal_bias="0.723"/>
    <TextView
            android:text="@string/enYuksekSkor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="264dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="#fff" android:textSize="24sp" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:id="@+id/textView6" app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintEnd_toStartOf="@+id/puan"/>
    <TextView
            android:text="562"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="164dp"
            android:textColor="#fff" android:textSize="24sp" android:id="@+id/puan"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginLeft="172dp"
            android:layout_marginStart="172dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="47dp"
            android:layout_marginRight="47dp"/>
    <TextView
            android:text="@string/puanınız"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="164dp"
            android:textColor="#fff" android:textSize="24sp"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/puan" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/oyunBitti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="76dp" app:layout_constraintStart_toStartOf="parent"
            android:textColor="#fff" android:textSize="24sp" android:layout_marginLeft="95dp"
            android:layout_marginStart="95dp"/>

    <Button
            android:text="@string/tekrarOyna"
            android:layout_width="210dp"
            android:layout_height="67dp" android:id="@+id/skorTekrarOynaButon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="#ffb300"
            android:layout_marginTop="128dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
            ads:layout_constraintHorizontal_bias="0.507" android:textColor="#FFFFFF"/>
    <com.google.android.gms.ads.AdView
            android:id="@+id/bannerSkor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/bannerReklam"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.0"
            ads:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>